fix right alignment

--- a/css/charts.css
+++ b/css/charts.css
@@ -83,13 +83,13 @@
 
 #toggle {
   float: right;
-  padding: 5px 10px;
+  padding: 5px 0px;
 }
 
 #toggle-gap, #toggle-scale {
   font-size: 14px;
   display: inline-block;
-  padding: 0 10px;
+  padding-left: 10px;
 }
 
 .district-view {
